--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bodza Travels</title>
-    <link rel="stylesheet" href="../static/css/index_style.css" />
+    <link rel="stylesheet" href="../static/css/style.css" />
 </head>
 <body>
     <header class="navbar">
@@ -12,7 +12,8 @@
             <span class="nav-logo">Bodza Travels</span>
             <div class="nav-center">
                 <a href="#" class="nav-item">HOME</a>
-                <a href="#about" class="nav-item">ABOUT</a>
+                <a href="about.html" class="nav-item">ABOUT</a>
+                <a href="support.html" class="nav-support">HELP</a>
             </div>
         </nav>
     </header>
