fix flask routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
         <nav class="nav-menu">
             <span class="nav-logo">Bodza Travels</span>
             <div class="nav-center">
-                <a href="#" class="nav-item">HOME</a>
-                <a href="about.html" class="nav-item">ABOUT</a>
-                <a href="support.html" class="nav-support">HELP</a>
+                <a href="/" class="nav-item">HOME</a>
+                <a href="/about" class="nav-item">ABOUT</a>
+                <a href="/support" class="nav-support">HELP</a>
             </div>
         </nav>
     </header>
