--- a/templates/support.html
+++ b/templates/support.html
@@ -11,8 +11,8 @@
         <nav class="nav-menu">
             <span class="nav-logo">Bodza Travels</span>
             <div class="nav-center">
-                <a href="index.html" class="nav-item">HOME</a>
-                <a href="about.html" class="nav-item">ABOUT</a>
+                <a href="/" class="nav-item">HOME</a>
+                <a href="/about" class="nav-item">ABOUT</a>
                 <a href="/support" class="nav-support">HELP</a>
             </div>
         </nav>
