--- a/templates/support.html
+++ b/templates/support.html
@@ -3,23 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="../static/images/logo.ico" type="image/x-icon" />
   <title>Support - Bodza Travels</title>
   <link rel="stylesheet" href="../static/css/style.css" />
 </head>
 <body>
   <header class="navbar">
         <nav class="nav-menu">
-            <span class="nav-logo">Bodza Travels</span>
+            <span class="nav-logo">
+                <img src="../static/images/logo.png" alt="logo">
+                Bodza Travels
+            </span>
             <div class="nav-center">
                 <a href="/" class="nav-item">HOME</a>
                 <a href="/about" class="nav-item">ABOUT</a>
+            </div>
+            <div class="nav-right">
                 <a href="/support" class="nav-support">HELP</a>
             </div>
         </nav>
   </header>
 
-  <main class="hero">
-    <div class="hero-overlay">
+  <main class="main-content">
+    <div class="main-content-overlay">
       <h1 class="title">Support Form</h1>
       <form action="/submit-support" method="POST" class="support-form">
         <input type="text" name="name" placeholder="Your name" required />
