Add recent places feature with database integration and update navigation

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
             <div class="nav-center">
                 <a href="/" class="nav-item">HOME</a>
                 <a href="/about" class="nav-item">ABOUT</a>
+                <a href="/recent_places" class="nav-item">RECENTLY SEARCHED</a>
             </div>
             <div class="nav-right">
                 <a href="/support" class="nav-support">HELP</a>
