--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,7 +197,7 @@ body, html {
 .search-box button:hover {
   background-color: #e6b800;
 }
-
+  
 #placesList {
   margin-top: 1.5rem;
   text-align: left;
@@ -211,6 +211,31 @@ body, html {
   text-align: center;
   font-size: 0.9rem;
   line-height: 1.4;
+}
+
+.recent-list {
+  list-style: none;
+  padding: 0;
+  margin-top: 1.5rem;
+  text-align: left;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.05rem;
+  color: #333;
+}
+
+.recent-list li {
+  background-color: #f3f3f3;
+  padding: 0.75rem 1rem;
+  margin-bottom: 0.5rem;
+  border-left: 4px solid #00dd58;
+  border-radius: 6px;
+  transition: background-color 0.2s;
+}
+
+.recent-list li:hover {
+  background-color: #e0fce7;
 }
 
 @media (max-width: 600px) {
