--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,10 @@ body, html {
   height: 100%;
   background-color: #f9f9f9;
   color: #333;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar {
@@ -137,8 +141,10 @@ body, html {
 }
 
 .main-content {
-  background: url('../images/homebg.jpg') no-repeat center center/cover;
-  height: calc(100vh - 120px);
+  background: url('../images/main_bg.jpg') no-repeat center center/cover;
+  background-size: cover;
+  flex: 1;
+  background-color: #f3f3f3;
   display: flex;
   justify-content: center;
   align-items: center;
