add results and api search, cat map, js, and fixes + db saving

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,6 @@
                 </div>
                 <button type="submit">LET'S GO!</button>
             </form>
-            <div id="placesList"></div>
         </div>
     </main>
     <footer class="footer">
@@ -44,6 +43,6 @@
         <p>2025</p>
     </footer>
 
-    <script src="../static/js/homepage.js"></script>
+    <script src="../static/js/API_searches.js"></script>
 </body>
 </html>
