--- a/static/css/style.css
+++ b/static/css/style.css
@@ -158,7 +158,7 @@ body, html {
   text-align: center;
   max-width: 600px;
   width: 90%;
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+  
 }
 
 .subtitle {
@@ -166,6 +166,8 @@ body, html {
   color: #00dd58;
   margin-bottom: 1.2rem;
   font-style: italic;
+  -webkit-text-stroke-width: 0.25px;
+  -webkit-text-stroke-color: black;
 }
 
 .title {
