added comments for sources

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+/*I used copilot autocomplete suggestions too in this file to progress faster and improve the quality*/
 * {
   margin: 0;
   padding: 0;
